Handle pr feedback